implemented a basic first version of the Timer (#346)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@733 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Core/HeuristicLab.Hive.Client.Core.csproj
+++ b/sources/HeuristicLab.Hive.Client.Core/HeuristicLab.Hive.Client.Core.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Core.cs" />
     <Compile Include="CoreApplication.cs" />
     <Compile Include="CorePlugin.cs" />
+    <Compile Include="Heartbeat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
