implemented a threadsafe MessageQueue (#347)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@734 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Common/HeuristicLab.Hive.Client.Common.csproj
+++ b/sources/HeuristicLab.Hive.Client.Common/HeuristicLab.Hive.Client.Common.csproj
@@ -66,6 +66,8 @@
   <ItemGroup>
     <Compile Include="CommonPlugin.cs" />
     <Compile Include="Logging.cs" />
+    <Compile Include="MessageContainer.cs" />
+    <Compile Include="MessageQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
