--- a/sources/HeuristicLab.Hive.Client.Common/HeuristicLab.Hive.Client.Common.csproj
+++ b/sources/HeuristicLab.Hive.Client.Common/HeuristicLab.Hive.Client.Common.csproj
@@ -65,10 +65,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonPlugin.cs" />
+    <Compile Include="JobBase.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="MessageContainer.cs" />
     <Compile Include="MessageQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestJob.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
