changed interface between model and view (#316)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@761 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
+++ b/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
@@ -60,14 +60,15 @@
     <Compile Include="ChangeType.cs" />
     <Compile Include="ChartDataModelBase.cs" />
     <Compile Include="ChartDataRowsModel.cs" />
-    <Compile Include="ChartDataRowsModelColumn.cs" />
-    <Compile Include="ChartDataRowsModelColumnChangedHandler.cs" />
     <Compile Include="ChartDataRowsModelDummy.cs" />
     <Compile Include="CompositeShape.cs" />
+    <Compile Include="DataRow.cs" />
+    <Compile Include="DrawingStyle.cs" />
     <Compile Include="HeuristicLabVisualizationPlugin.cs" />
     <Compile Include="ICanvas.cs" />
     <Compile Include="IChartDataModel.cs" />
     <Compile Include="IChartDataRowsModel.cs" />
+    <Compile Include="IDataRow.cs" />
     <Compile Include="IShape.cs" />
     <Compile Include="LineChart.cs">
       <SubType>UserControl</SubType>
