[TICKET #349] Changed default UI layout in SequentialEngine to reduce weight of scope view
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@774 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.SequentialEngine/HeuristicLab.SequentialEngine.csproj
+++ b/sources/HeuristicLab.SequentialEngine/HeuristicLab.SequentialEngine.csproj
@@ -85,6 +85,11 @@
       <Name>HeuristicLab.PluginInfrastructure</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SequentialEngineEditor.resx">
+      <DependentUpon>SequentialEngineEditor.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
