--- a/sources/HeuristicLab.Settings/app.config
+++ b/sources/HeuristicLab.Settings/app.config
@@ -10,15 +10,15 @@
     </configSections>
     <applicationSettings>
         <HeuristicLab.Settings.Properties.Settings>
-            <setting name="MySetting" serializeAs="String">
-                <value>Nice Value</value>
+            <setting name="MyApplicationSetting" serializeAs="String">
+                <value>Application Setting Value</value>
             </setting>
         </HeuristicLab.Settings.Properties.Settings>
     </applicationSettings>
     <userSettings>
         <HeuristicLab.Settings.Properties.Settings>
-            <setting name="AnotherSetting" serializeAs="String">
-                <value>COOL!!</value>
+            <setting name="MyUserSetting" serializeAs="String">
+                <value>User Setting Value</value>
             </setting>
         </HeuristicLab.Settings.Properties.Settings>
     </userSettings>
