Continued work on ticket (#365) + created a Job Interface
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@779 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Common/HeuristicLab.Hive.Client.Common.csproj
+++ b/sources/HeuristicLab.Hive.Client.Common/HeuristicLab.Hive.Client.Common.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonPlugin.cs" />
+    <Compile Include="Interfaces\IJob.cs" />
     <Compile Include="JobBase.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="MessageContainer.cs" />
