--- a/sources/HeuristicLab.Settings/app.config
+++ b/sources/HeuristicLab.Settings/app.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="HeuristicLab.Settings.Settings1" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
             <section name="HeuristicLab.Settings.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
@@ -9,6 +10,11 @@
         </sectionGroup>
     </configSections>
     <applicationSettings>
+        <HeuristicLab.Settings.Settings1>
+            <setting name="MySettingInAFile" serializeAs="String">
+                <value>MySettingInAFileValue</value>
+            </setting>
+        </HeuristicLab.Settings.Settings1>
         <HeuristicLab.Settings.Properties.Settings>
             <setting name="MyApplicationSetting" serializeAs="String">
                 <value>Application Setting Value</value>
