Added Status class (#374)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@789 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Common/HeuristicLab.Hive.Client.Common.csproj
+++ b/sources/HeuristicLab.Hive.Client.Common/HeuristicLab.Hive.Client.Common.csproj
@@ -71,6 +71,7 @@
     <Compile Include="MessageContainer.cs" />
     <Compile Include="MessageQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Status.cs" />
     <Compile Include="TestJob.cs" />
   </ItemGroup>
   <ItemGroup>
