--- a/sources/HeuristicLab.Hive.Client.Common/HeuristicLab.Hive.Client.Common.csproj
+++ b/sources/HeuristicLab.Hive.Client.Common/HeuristicLab.Hive.Client.Common.csproj
@@ -68,7 +68,6 @@
     <Compile Include="Interfaces\IJob.cs" />
     <Compile Include="JobBase.cs" />
     <Compile Include="Logging.cs" />
-    <Compile Include="MessageContainer.cs" />
     <Compile Include="MessageQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Status.cs" />
@@ -78,6 +77,10 @@
     <ProjectReference Include="..\HeuristicLab.Core\HeuristicLab.Core.csproj">
       <Project>{F43B59AB-2B8C-4570-BC1E-15592086517C}</Project>
       <Name>HeuristicLab.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HeuristicLab.Hive.Contracts\HeuristicLab.Hive.Contracts.csproj">
+      <Project>{134F93D7-E7C8-4ECD-9923-7F63259A60D8}</Project>
+      <Name>HeuristicLab.Hive.Contracts</Name>
     </ProjectReference>
     <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
