added implementation of UniformCrossover #382 (Uniform crossover operator for GP). Testing still necessary.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@802 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP/HeuristicLab.GP.csproj
+++ b/sources/HeuristicLab.GP/HeuristicLab.GP.csproj
@@ -70,6 +70,7 @@
     <Compile Include="EqualiserController.cs" />
     <Compile Include="Logging\TreeArityAnalyser.cs" />
     <Compile Include="OffspringEqualiser.cs" />
+    <Compile Include="Recombination\UniformCrossover.cs" />
     <Compile Include="UnknownFunctionException.cs" />
     <Compile Include="IFunctionTreeNameGenerator.cs" />
     <Compile Include="IFunctionTreeExporter.cs" />
