--- a/sources/HeuristicLab.Hive.Client.Common/HeuristicLab.Hive.Client.Common.csproj
+++ b/sources/HeuristicLab.Hive.Client.Common/HeuristicLab.Hive.Client.Common.csproj
@@ -65,13 +65,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonPlugin.cs" />
-    <Compile Include="Interfaces\IJob.cs" />
-    <Compile Include="JobBase.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="MessageQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Status.cs" />
-    <Compile Include="TestJob.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HeuristicLab.Core\HeuristicLab.Core.csproj">
@@ -90,6 +87,9 @@
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
