--- a/sources/HeuristicLab.Hive.Server.Core/HeuristicLab.Hive.Server.Core.csproj
+++ b/sources/HeuristicLab.Hive.Server.Core/HeuristicLab.Hive.Server.Core.csproj
@@ -49,10 +49,14 @@
   <ItemGroup>
     <Compile Include="ClientCommunicator.cs" />
     <Compile Include="ClientManager.cs" />
+    <Compile Include="DbTestApp.cs" />
     <Compile Include="HiveServerCorePlugin.cs" />
+    <Compile Include="InternalInterfaces\DataAccess\IClientAdapter.cs" />
+    <Compile Include="InternalInterfaces\DataAccess\IResourceAdapter.cs" />
     <Compile Include="JobManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerConsoleFacade.cs" />
+    <Compile Include="ServiceLocator.cs" />
     <Compile Include="UserRoleManager.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -72,9 +76,6 @@
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="InternalInterfaces\DataAccess\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
