--- a/sources/HeuristicLab.GP/HeuristicLab.GP.csproj
+++ b/sources/HeuristicLab.GP/HeuristicLab.GP.csproj
@@ -70,6 +70,7 @@
     <Compile Include="EqualiserController.cs" />
     <Compile Include="Logging\TreeArityAnalyser.cs" />
     <Compile Include="OffspringEqualiser.cs" />
+    <Compile Include="Recombination\SizeConstrictedGPCrossoverBase.cs" />
     <Compile Include="Recombination\GPCrossoverBase.cs" />
     <Compile Include="Recombination\UniformCrossover.cs" />
     <Compile Include="UnknownFunctionException.cs" />
