--- a/sources/HeuristicLab.Hive.Contracts/HeuristicLab.Hive.Contracts.csproj
+++ b/sources/HeuristicLab.Hive.Contracts/HeuristicLab.Hive.Contracts.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response.cs" />
     <Compile Include="ResponseHB.cs" />
+    <Compile Include="ResponseResultReceived.cs" />
     <Compile Include="TestJob.cs" />
   </ItemGroup>
   <ItemGroup>
