Implemented first functional prototype of ConfigMerger (#402)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@849 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/tools/ConfigMerger/ConfigMerger.csproj
+++ b/tools/ConfigMerger/ConfigMerger.csproj
@@ -14,7 +14,7 @@
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
-    <StartupObject>HeuristicLab.Tools.ConfigMerger.Program</StartupObject>
+    <StartupObject>HeuristicLab.Tools.ConfigMerger.ConfigMerger</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="ConfigMerger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
