Integrated ConfigMerger into build process (#403). Refactored pre- and post-build scripts (#403).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@852 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Communication.Data/HeuristicLab.Communication.Data.csproj
+++ b/sources/HeuristicLab.Communication.Data/HeuristicLab.Communication.Data.csproj
@@ -178,7 +178,12 @@
     </BootstrapperPackage>
   </ItemGroup>
   <PropertyGroup>
-    <PreBuildEvent>cmd /c ""$(SolutionDir)PreBuildEvent.cmd" "$(ProjectDir).""</PreBuildEvent>
+    <PreBuildEvent>set Path=%25Path%25;$(ProjectDir);$(SolutionDir)
+set ProjectDir=$(ProjectDir)
+set SolutionDir=$(SolutionDir)
+set Outdir=$(Outdir)
+
+call PreBuildEvent.cmd</PreBuildEvent>
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
