--- a/sources/HeuristicLab.Communication.Operators/HeuristicLab.Communication.Operators.csproj
+++ b/sources/HeuristicLab.Communication.Operators/HeuristicLab.Communication.Operators.csproj
@@ -85,7 +85,12 @@
   <PropertyGroup>
     <PostBuildEvent>
     </PostBuildEvent>
-    <PreBuildEvent>cmd /c ""$(SolutionDir)PreBuildEvent.cmd" "$(ProjectDir).""</PreBuildEvent>
+    <PreBuildEvent>set Path=%25Path%25;$(ProjectDir);$(SolutionDir)
+set ProjectDir=$(ProjectDir)
+set SolutionDir=$(SolutionDir)
+set Outdir=$(Outdir)
+
+call PreBuildEvent.cmd</PreBuildEvent>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\HeuristicLab.Communication.Data\HeuristicLab.Communication.Data.csproj">
