--- a/sources/HeuristicLab.Visualization.Test/HeuristicLab.Visualization.Test.csproj
+++ b/sources/HeuristicLab.Visualization.Test/HeuristicLab.Visualization.Test.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{23117533-8A91-474E-BBF6-C39485D0810A}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -88,6 +88,11 @@
   </Target>
   -->
   <PropertyGroup>
-    <PreBuildEvent>cmd /c ""$(SolutionDir)PreBuildEvent.cmd" "$(ProjectDir).""</PreBuildEvent>
+    <PreBuildEvent>set Path=%25Path%25;$(ProjectDir);$(SolutionDir)
+set ProjectDir=$(ProjectDir)
+set SolutionDir=$(SolutionDir)
+set Outdir=$(Outdir)
+
+call PreBuildEvent.cmd</PreBuildEvent>
   </PropertyGroup>
 </Project>
