--- a/sources/HeuristicLab.PluginInfrastructure.GUI/app.config
+++ b/sources/HeuristicLab.PluginInfrastructure.GUI/app.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="HeuristicLab.PluginInfrastructure.GUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="HeuristicLab.PluginInfrastructure.GUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <userSettings>
         <HeuristicLab.PluginInfrastructure.GUI.Properties.Settings>
@@ -15,11 +18,12 @@
                     </ArrayOfString>
                 </value>
             </setting>
+        </HeuristicLab.PluginInfrastructure.GUI.Properties.Settings>
+    </userSettings>
+    <applicationSettings>
+        <HeuristicLab.PluginInfrastructure.GUI.Properties.Settings>
             <setting name="CacheDir" serializeAs="String">
                 <value>plugins\cache</value>
-            </setting>
-            <setting name="PluginDir" serializeAs="String">
-                <value>plugins</value>
             </setting>
             <setting name="BackupDir" serializeAs="String">
                 <value>plugins\backup</value>
@@ -28,5 +32,5 @@
                 <value>plugins\temp</value>
             </setting>
         </HeuristicLab.PluginInfrastructure.GUI.Properties.Settings>
-    </userSettings>
+    </applicationSettings>
 </configuration>
