--- a/sources/HeuristicLab/app.config
+++ b/sources/HeuristicLab/app.config
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="HeuristicLab.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="HeuristicLab.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <userSettings>
-        <HeuristicLab.Properties.Settings>
-            <setting name="User" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Organization" serializeAs="String">
-                <value />
-            </setting>
-        </HeuristicLab.Properties.Settings>
-    </userSettings>
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SQLite"/>
@@ -22,4 +12,14 @@
            description=".Net Framework Data Provider for SQLite"           type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
     </DbProviderFactories>
   </system.data>
+  <applicationSettings>
+    <HeuristicLab.Properties.Settings>
+      <setting name="User" serializeAs="String">
+        <value>unknown</value>
+      </setting>
+      <setting name="Organization" serializeAs="String">
+        <value>unknown</value>
+      </setting>
+    </HeuristicLab.Properties.Settings>
+  </applicationSettings>
 </configuration>
