--- a/sources/HeuristicLab/Properties/Settings.settings
+++ b/sources/HeuristicLab/Properties/Settings.settings
@@ -2,11 +2,11 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HeuristicLab.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="User" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+    <Setting Name="User" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">unknown</Value>
     </Setting>
-    <Setting Name="Organization" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+    <Setting Name="Organization" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">unknown</Value>
     </Setting>
   </Settings>
 </SettingsFile>
