changes on LegendForm (#407)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@871 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Visualization.Test/HeuristicLab.Visualization.Test.csproj
+++ b/sources/HeuristicLab.Visualization.Test/HeuristicLab.Visualization.Test.csproj
@@ -116,6 +116,9 @@
     <EmbeddedResource Include="LineChartTestForm.resx">
       <DependentUpon>LineChartTestForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="LegendForm.resx">
+      <DependentUpon>LegendForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
       <SubType>Designer</SubType>
