Added userGroupAdapter, clientGroupAdapter interfaces (#372)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@910 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Server.ADODataAccess/HeuristicLab.Hive.Server.ADODataAccess.csproj
+++ b/sources/HeuristicLab.Hive.Server.ADODataAccess/HeuristicLab.Hive.Server.ADODataAccess.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientAdapter.cs" />
+    <Compile Include="ClientGroupAdapter.cs" />
     <Compile Include="dsHiveServer.cs">
       <DependentUpon>dsHiveServer.xsd</DependentUpon>
       <SubType>Component</SubType>
@@ -83,6 +84,7 @@
     </Compile>
     <Compile Include="ResourceAdapter.cs" />
     <Compile Include="UserAdapter.cs" />
+    <Compile Include="UserGroupAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="dsHiveServer.xsc">
